--- a/CRangeEnergy/CRangeEnergy.vcxproj
+++ b/CRangeEnergy/CRangeEnergy.vcxproj
@@ -71,6 +71,12 @@
   <ItemGroup>
     <None Include="ReadMe.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CRangeEnergy.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="CRangeEnergy.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
